--- a/sample.ipynb
+++ b/sample.ipynb
@@ -131,6 +131,27 @@
    "source": [
     "type(df.iloc[rand_row, 0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- 0.46916747093200684 seconds ---\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Performance check\n",
+    "import time\n",
+    "start_time = time.time()\n",
+    "from pandas import read_excel\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+   ]
   }
  ],
  "metadata": {
